# yayd

./: .gitignore  .project  .travis.yml  Cargo.toml  LICENSE  README.md  README.md~  config.md  db.md  example.sql  install.sql  setup.sql  test.sh  upgrade.sql
.github/workflows/: build.yml
src/: codes.md  install.sql  main.rs
src/handler/: mod.rs  soundcloud.rs  twitch.rs  youtube.rs
src/lib/: config.rs  converter.rs  database.rs  db.rs  downloader.rs  http.rs  logger.rs  mod.rs  status.rs
tests/: SHA2-256SUMS.txt
