[package]
name = "yayd-backend"
version = "0.6.1"
authors = ["Aron Heinecke <Ox0p54r36@t-online.de>"]

[[bin]]
name = "yayd-backend"

#[profile.release]
#lto = true

[dependencies]
lazy_static = ">= 0.2.8"
toml = ">= 0.4.1"
serde = "1.0.8"
serde_derive = "1.0.8"
log = ">= 0.3.8"
log4rs = ">= 0.7.0"
zip = ">= 0.2.3"
timer = ">= 0.1.6"
chrono = ">= 0.3.1"
hyper = ">= 0.10.10"
hyper-native-tls = ">= 0.2.2"
json = ">= 0.11.6"
flate2 = ">= 0.2.19"
quick-error = ">= 1.2.0"
sha2 = ">= 0.5.2"

[dependencies.mysql]
version = ">= 11.1.0"
default-features = false

[dependencies.regex]
version = ">= 0.2.2"
regex_macros = ">= 0.1.26"
