[package]
name = "yayd-backend"
version = "0.6.4"
authors = ["Aron Heinecke <Ox0p54r36@t-online.de>"]

[[bin]]
name = "yayd-backend"

[profile.release]
lto = true

[dependencies]
lazy_static = "1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
log4rs = "0.8"
zip = "0.5"
timer = "0.2"
chrono = "0.4"
reqwest = "0.9"
json = "0.11"
flate2 = "1.0"
quick-error = "1.2"
sha2 = "0.8"
regex = "1"

[dependencies.mysql]
version = "16"
