[package]
name = "yayd-backend"
version = "0.7.0"
authors = ["Aron Heinecke <Ox0p54r36@t-online.de>"]

[[bin]]
name = "yayd-backend"

[profile.release]
lto = true

[dependencies]
lazy_static = "1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
log = "0.4"
log4rs = "1"
zip = "0.5"
timer = "0.2"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking","gzip"] }
serde_json = "1.0"
flate2 = "1.0.22"
quick-error = "2"
sha2 = "0.9"
regex = "1"

[dependencies.mysql]
version = "21"
